@@ -280,6 +280,10 @@ specifying links during span creation (with the limitation that span link
   Lambda layers now that
   https://aws.amazon.com/blogs/compute/node-js-16-x-runtime-now-available-in-aws-lambda/[this runtime is available on AWS].
 
+- Add `*principal*` pattern to default value for `sanitizeFieldNames` config
+  var, so that it is more likely to redact authentication-related HTTP headers,
+  e.g. on Azure. ({issues}2938[#2938])
+
 [float]
 ===== Bug fixes
 
